--- a/codes/lab05_linear_module/linear_module_demo.ipynb
+++ b/codes/lab05_linear_module/linear_module_demo.ipynb
@@ -26,16 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear(in_features=5, out_features=3, bias=True)\n",
-      "torch.Size([3, 5])\n",
-      "torch.Size([3])\n"
+      "Linear(in_features=5, out_features=3, bias=True)\n"
      ]
     }
    ],
@@ -53,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.5148, 0.6442, 0.5563, 0.4040, 0.9193])\n",
+      "tensor([0.1200, 0.0817, 0.6930, 0.0457, 0.6113])\n",
       "torch.Size([5])\n"
      ]
     }
@@ -80,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.3300, -0.1137,  0.6271], grad_fn=<ThAddBackward>)\n"
+      "tensor([ 0.3374, -0.0486, -0.3604], grad_fn=<ThAddBackward>)\n"
      ]
     }
    ],
@@ -123,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,9 +129,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.2652, -0.4428,  0.1893,  0.3214, -0.0462],\n",
-      "        [-0.3800,  0.4037,  0.0042,  0.4156, -0.4236],\n",
-      "        [ 0.2434,  0.2813,  0.1570, -0.4028,  0.0869]], requires_grad=True)\n",
+      "tensor([[ 0.1336,  0.4254, -0.2610,  0.1001,  0.1002],\n",
+      "        [ 0.1414,  0.4114,  0.1749,  0.1252,  0.0679],\n",
+      "        [ 0.3203,  0.2172, -0.2487, -0.1787, -0.2006]], requires_grad=True)\n",
       "torch.Size([3, 5])\n"
      ]
     }
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([0.2860, 0.0411, 0.3160], requires_grad=True)\n",
+      "tensor([ 0.4017, -0.2676, -0.1135], requires_grad=True)\n",
       "torch.Size([3])\n"
      ]
     }
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,9 +178,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.0000,  1.0000,  2.0000,  0.3214, -0.0462],\n",
-      "        [-0.3800,  0.4037,  0.0042,  0.4156, -0.4236],\n",
-      "        [ 0.2434,  0.2813,  0.1570, -0.4028,  0.0869]], grad_fn=<CopySlices>)\n"
+      "tensor([[ 0.0000,  1.0000,  2.0000,  0.1001,  0.1002],\n",
+      "        [ 0.1414,  0.4114,  0.1749,  0.1252,  0.0679],\n",
+      "        [ 0.3203,  0.2172, -0.2487, -0.1787, -0.2006]], grad_fn=<CopySlices>)\n"
      ]
     }
    ],
@@ -202,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +226,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.1703,  0.1601,  0.3649, -0.1387, -0.3961],\n",
-      "        [ 0.4339,  0.2803,  0.0350, -0.3152,  0.3601],\n",
-      "        [-0.0434,  0.4186,  0.1819,  0.0771,  0.1898]], requires_grad=True)\n"
+      "tensor([[-0.3169,  0.1733, -0.1733,  0.4253,  0.0964],\n",
+      "        [-0.4430, -0.3273, -0.0522,  0.1813,  0.4277],\n",
+      "        [ 0.0102, -0.1986, -0.0600, -0.0766,  0.2373]], requires_grad=True)\n"
      ]
     }
    ],
@@ -240,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
