--- a/codes/lab03_pytorch_tensor1/pytorch_tensor_part1_exercise.ipynb
+++ b/codes/lab03_pytorch_tensor1/pytorch_tensor_part1_exercise.ipynb
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "# write your code here\n"
+    "# write your code here\n",
+    "\n"
    ]
   },
   {
@@ -113,6 +114,13 @@
     "# write your code here\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
