--- a/codes/lab04_pytorch_tensor2/pytorch_tensor_part2_exercise.ipynb
+++ b/codes/lab04_pytorch_tensor2/pytorch_tensor_part2_exercise.ipynb
@@ -64,6 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import check_mnist_dataset_exists\n",
+    "check_mnist_dataset_exists()\n",
+    "\n",
     "data  =  torch.load('../data/mnist/train_data.pt')\n",
     "label =  torch.load('../data/mnist/train_label.pt')"
    ]
@@ -95,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -115,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utils.show(data[0])"
+    "utils.show(data[10])"
    ]
   },
   {
@@ -199,6 +204,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import check_cifar_dataset_exists\n",
+    "check_cifar_dataset_exists() \n",
+    "\n",
     "data  =  torch.load('../data/cifar/train_data.pt')\n",
     "label =  torch.load('../data/cifar/train_label.pt')"
    ]
