--- a/codes/lab07_vanilla_nn/vanilla_nn_demo.ipynb
+++ b/codes/lab07_vanilla_nn/vanilla_nn_demo.ipynb
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we are gong to feed  $x=\\begin{bmatrix}1\\\\1 \\end{bmatrix}$ to this modified network:"
+    "### Now we are going to feed  $x=\\begin{bmatrix}1\\\\1 \\end{bmatrix}$ to this modified network:"
    ]
   },
   {
