--- a/codes/lab08_train_vanilla_nn/train_vanilla_nn_demo.ipynb
+++ b/codes/lab08_train_vanilla_nn/train_vanilla_nn_demo.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "idx=randint(5,10)\n",
+    "idx=randint(5,10) # generate an integer randomly from 5 to 10 included.\n",
     "\n",
     "print(idx)"
    ]
@@ -60,6 +60,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import check_mnist_dataset_exists\n",
+    "check_mnist_dataset_exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,9 +148,11 @@
     "\n",
     "    def __init__(self, input_size, output_size):\n",
     "        super(one_layer_net , self).__init__()\n",
+    "        \n",
     "        self.linear_layer = nn.Linear( input_size, output_size , bias=False)\n",
     "        \n",
     "    def forward(self, x):\n",
+    "        \n",
     "        x = self.linear_layer(x)\n",
     "        p = F.softmax(x, dim=1)\n",
     "        return p"
