--- a/codes/lab08_train_vanilla_nn/train_vanilla_nn_exercise.ipynb
+++ b/codes/lab08_train_vanilla_nn/train_vanilla_nn_exercise.ipynb
@@ -37,6 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import check_fashion_mnist_dataset_exists\n",
+    "check_fashion_mnist_dataset_exists()\n",
+    "\n",
     "train_data=torch.load('../data/fashion-mnist/train_data.pt')\n",
     "train_label=torch.load('../data/fashion-mnist/train_label.pt')\n",
     "print(train_data.size())\n",
@@ -183,7 +186,7 @@
     "\n",
     "\n",
     "    # feed the input to the net  \n",
-    "    input.requires_grad_()\n",
+    "    input.requires_grad_() # for backprobagation -- we will discuss it later\n",
     "    # complete here \n",
     " \n",
     "    # update the weights (all the magic happens here -- we will discuss it later)\n",
