--- a/codes/lab08_train_vanilla_nn/train_vanilla_nn_solution.ipynb
+++ b/codes/lab08_train_vanilla_nn/train_vanilla_nn_solution.ipynb
@@ -46,6 +46,9 @@
     }
    ],
    "source": [
+    "from utils import check_fashion_mnist_dataset_exists\n",
+    "check_fashion_mnist_dataset_exists()\n",
+    "\n",
     "train_data=torch.load('../data/fashion-mnist/train_data.pt')\n",
     "train_label=torch.load('../data/fashion-mnist/train_label.pt')\n",
     "print(train_data.size())\n",
