--- a/codes/lab09_minibatch_training/minibatch_training_exercise.ipynb
+++ b/codes/lab09_minibatch_training/minibatch_training_exercise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,16 @@
    "metadata": {},
    "source": [
     "### Download the data and print the sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import check_fashion_mnist_dataset_exists\n",
+    "check_fashion_mnist_dataset_exists()"
    ]
   },
   {
@@ -78,9 +88,11 @@
     "\n",
     "    def __init__(self, input_size, output_size):\n",
     "        super(one_layer_net , self).__init__()\n",
+    "        \n",
     "        self.linear_layer = # complete here\n",
     "        \n",
     "    def forward(self, x):\n",
+    "        \n",
     "        y = # complete here\n",
     "        prob = # complete here\n",
     "        return prob"
