--- a/codes/lab09_minibatch_training/minibatch_training_solution.ipynb
+++ b/codes/lab09_minibatch_training/minibatch_training_solution.ipynb
@@ -32,6 +32,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import check_fashion_mnist_dataset_exists\n",
+    "check_fashion_mnist_dataset_exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
