--- a/codes/lab10_cross_entropy/cross_entropy_exercise.ipynb
+++ b/codes/lab10_cross_entropy/cross_entropy_exercise.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "criterion= # COMPLETE HERE\n",
+    "criterion=  # COMPLETE HERE\n",
     "\n",
     "print(criterion)"
    ]
@@ -54,9 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = torch.LongTensor( # COMPLETE HERE   )\n",
+    "labels = # COMPLETE HERE\n",
     "\n",
-    "print(labels)"
+    "print(labels,labels.type())"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = # COMPLETE HERE\n",
+    "scores =  # COMPLETE HERE\n",
     "\n",
     "print(scores)"
    ]
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_loss = # COMPLETE HERE\n",
+    "average_loss =  # COMPLETE HERE\n",
     "\n",
     "print(average_loss.item())"
    ]
