--- a/codes/lab13_monitoring_loss/monitoring_loss_exercise.ipynb
+++ b/codes/lab13_monitoring_loss/monitoring_loss_exercise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([50000, 3, 32, 32])\n"
+     ]
+    }
+   ],
    "source": [
+    "from utils import check_cifar_dataset_exists\n",
+    "check_cifar_dataset_exists() \n",
+    "\n",
     "train_data=torch.load('../data/cifar/train_data.pt')\n",
     "train_label=torch.load('../data/cifar/train_label.pt')\n",
     "test_data=torch.load('../data/cifar/test_data.pt')\n",
