--- a/codes/lab13_monitoring_loss/monitoring_loss_solution.ipynb
+++ b/codes/lab13_monitoring_loss/monitoring_loss_solution.ipynb
@@ -42,6 +42,9 @@
     }
    ],
    "source": [
+    "from utils import check_cifar_dataset_exists\n",
+    "check_cifar_dataset_exists() \n",
+    "\n",
     "train_data=torch.load('../data/cifar/train_data.pt')\n",
     "train_label=torch.load('../data/cifar/train_label.pt')\n",
     "test_data=torch.load('../data/cifar/test_data.pt')\n",
