--- a/codes/lab15_final/final_demo.ipynb
+++ b/codes/lab15_final/final_demo.ipynb
@@ -35,6 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import check_mnist_dataset_exists\n",
+    "check_mnist_dataset_exists()\n",
+    "\n",
     "train_data=torch.load('../data/mnist/train_data.pt')\n",
     "train_label=torch.load('../data/mnist/train_label.pt')\n",
     "test_data=torch.load('../data/mnist/test_data.pt')\n",
