--- a/codes/lab05_linear_module/linear_module_demo.ipynb
+++ b/codes/lab05_linear_module/linear_module_demo.ipynb
@@ -26,14 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear(in_features=5, out_features=3, bias=True)\n"
+      "Linear(in_features=5, out_features=3, bias=True)\n",
+      "torch.Size([3, 5])\n",
+      "torch.Size([3])\n"
      ]
     }
    ],
@@ -51,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.1200, 0.0817, 0.6930, 0.0457, 0.6113])\n",
+      "tensor([0.5148, 0.6442, 0.5563, 0.4040, 0.9193])\n",
       "torch.Size([5])\n"
      ]
     }
@@ -78,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.3374, -0.0486, -0.3604], grad_fn=<ThAddBackward>)\n"
+      "tensor([ 0.3300, -0.1137,  0.6271], grad_fn=<ThAddBackward>)\n"
      ]
     }
    ],
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,9 +131,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.1336,  0.4254, -0.2610,  0.1001,  0.1002],\n",
-      "        [ 0.1414,  0.4114,  0.1749,  0.1252,  0.0679],\n",
-      "        [ 0.3203,  0.2172, -0.2487, -0.1787, -0.2006]], requires_grad=True)\n",
+      "tensor([[ 0.2652, -0.4428,  0.1893,  0.3214, -0.0462],\n",
+      "        [-0.3800,  0.4037,  0.0042,  0.4156, -0.4236],\n",
+      "        [ 0.2434,  0.2813,  0.1570, -0.4028,  0.0869]], requires_grad=True)\n",
       "torch.Size([3, 5])\n"
      ]
     }
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([ 0.4017, -0.2676, -0.1135], requires_grad=True)\n",
+      "tensor([0.2860, 0.0411, 0.3160], requires_grad=True)\n",
       "torch.Size([3])\n"
      ]
     }
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -178,9 +180,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.0000,  1.0000,  2.0000,  0.1001,  0.1002],\n",
-      "        [ 0.1414,  0.4114,  0.1749,  0.1252,  0.0679],\n",
-      "        [ 0.3203,  0.2172, -0.2487, -0.1787, -0.2006]], grad_fn=<CopySlices>)\n"
+      "tensor([[ 0.0000,  1.0000,  2.0000,  0.3214, -0.0462],\n",
+      "        [-0.3800,  0.4037,  0.0042,  0.4156, -0.4236],\n",
+      "        [ 0.2434,  0.2813,  0.1570, -0.4028,  0.0869]], grad_fn=<CopySlices>)\n"
      ]
     }
    ],
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -226,9 +228,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[-0.3169,  0.1733, -0.1733,  0.4253,  0.0964],\n",
-      "        [-0.4430, -0.3273, -0.0522,  0.1813,  0.4277],\n",
-      "        [ 0.0102, -0.1986, -0.0600, -0.0766,  0.2373]], requires_grad=True)\n"
+      "tensor([[ 0.1703,  0.1601,  0.3649, -0.1387, -0.3961],\n",
+      "        [ 0.4339,  0.2803,  0.0350, -0.3152,  0.3601],\n",
+      "        [-0.0434,  0.4186,  0.1819,  0.0771,  0.1898]], requires_grad=True)\n"
      ]
     }
    ],
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
