--- a/codes/lab09_minibatch_training/minibatch_training_demo.ipynb
+++ b/codes/lab09_minibatch_training/minibatch_training_demo.ipynb
@@ -44,11 +44,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7075, 0.5836, 0.0563],\n",
-      "        [0.0976, 0.8272, 0.3906],\n",
-      "        [0.5456, 0.1260, 0.9314],\n",
-      "        [0.5566, 0.6821, 0.3809],\n",
-      "        [0.3422, 0.1527, 0.2731]])\n"
+      "tensor([[0.6150, 0.1278, 0.0138],\n",
+      "        [0.8931, 0.4737, 0.0106],\n",
+      "        [0.1011, 0.6245, 0.8927],\n",
+      "        [0.1110, 0.3418, 0.2449],\n",
+      "        [0.1310, 0.1678, 0.1680]])\n"
      ]
     }
    ],
@@ -73,12 +73,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([4, 4])\n"
+      "tensor([1, 2])\n"
      ]
     }
    ],
    "source": [
-    "indices=torch.LongTensor(2).random_(0,5)\n",
+    "indices=torch.LongTensor(2).random_(0,5) # generate an integer randomly from 0 to 5-1.\n",
     "print(indices)"
    ]
   },
@@ -98,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3422, 0.1527, 0.2731],\n",
-      "        [0.3422, 0.1527, 0.2731]])\n"
+      "tensor([[0.8931, 0.4737, 0.0106],\n",
+      "        [0.1011, 0.6245, 0.8927]])\n"
      ]
     }
    ],
@@ -120,6 +120,16 @@
    "metadata": {},
    "source": [
     "### Download the data and print the sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import check_mnist_dataset_exists\n",
+    "check_mnist_dataset_exists()"
    ]
   },
   {
