--- a/codes/lab11_mlp/mlp_exercise.ipynb
+++ b/codes/lab11_mlp/mlp_exercise.ipynb
@@ -34,15 +34,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([60000, 28, 28])\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from utils import check_fashion_mnist_dataset_exists\n",
+    "check_fashion_mnist_dataset_exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_data=torch.load('../data/fashion-mnist/train_data.pt')\n",
     "\n",
@@ -51,17 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([60000])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_label=torch.load('../data/fashion-mnist/train_label.pt')\n",
     "\n",
@@ -70,17 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10000, 28, 28])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data=torch.load('../data/fashion-mnist/test_data.pt')\n",
     "\n",
@@ -104,10 +90,10 @@
     "\n",
     "    def __init__(self, input_size, output_size):\n",
     "        super(one_layer_net , self).__init__()\n",
-    "        self.linear_layer = # complete here\n",
+    "        self.linear_layer =  # complete here\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        scores =  # complete here\n",
+    "        scores =   # complete here\n",
     "        return scores"
    ]
   },
@@ -124,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net= # complete here\n",
+    "net=  # complete here\n",
     "print(net)"
    ]
   },
@@ -153,13 +139,13 @@
    "outputs": [],
    "source": [
     "# make the criterion\n",
-    "criterion = # complete here\n",
+    "criterion =  # complete here\n",
     "\n",
     "# make the SGD optimizer. \n",
-    "optimizer=torch.optim.SGD(  #complete here  )\n",
+    "optimizer=torch.optim.SGD(net.parameters(),lr=0.01)\n",
     "\n",
     "# set up the batch size   \n",
-    "bs="
+    "bs=50"
    ]
   },
   {
@@ -178,28 +164,29 @@
     "for iter in range(1,5000):\n",
     "    \n",
     "    # Set dL/dU, dL/dV, dL/dW to be filled with zeros\n",
-    "   \n",
+    "     \n",
     "     \n",
     "    # create a minibatch\n",
     "    \n",
     "    \n",
-    "    \n",
     "    # reshape the minibatch\n",
-    "\n",
+    "     \n",
     "    \n",
     "    # tell Pytorch to start tracking all operations that will be done on \"inputs\"\n",
-    "\n",
+    "    \n",
     "\n",
     "    # forward the minibatch through the net  \n",
-    "\n",
+    "    \n",
     "    \n",
     "    # Compute the average of the losses of the data points in the minibatch\n",
-    "\n",
+    "    \n",
     "    \n",
     "    # backward pass to compute dL/dU, dL/dV and dL/dW    \n",
-    "\n",
     "    \n",
-    "    # do one step of stochastic gradient descent: U=U-lr(dL/dU), V=V-lr(dL/dU), ...\n"
+    "    \n",
+    "    # do one step of stochastic gradient descent: U=U-lr(dL/dU), V=V-lr(dL/dU), ...\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -227,6 +214,13 @@
     "probs= F.softmax(scores, dim=1)\n",
     "utils.show_prob_fashion_mnist(probs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
