--- a/codes/labs_lecture10/lab04_vgg/vgg_exercise.ipynb
+++ b/codes/labs_lecture10/lab04_vgg/vgg_exercise.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 08.02 : CIFAR multi-layer -- solution"
+    "# Lab 10.04 : VGG architecture - exercise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,26 +29,18 @@
     "### With or without GPU?\n",
     "\n",
     "It is recommended to run this code on GPU:<br> \n",
-    "* Time for 1 epoch on CPU : 5 sec<br> \n",
-    "* Time for 1 epoch on GPU : 0.6 sec w/ GeForce GTX 1080 Ti<br>"
+    "* Time for 1 epoch on CPU : 841 sec (14.02 min)<br> \n",
+    "* Time for 1 epoch on GPU : 9 sec w/ GeForce GTX 1080 Ti <br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device= torch.device(\"cuda\")\n",
-    "#device= torch.device(\"cpu\")\n",
+    "device= torch.device(\"cpu\")\n",
     "print(device)"
    ]
   },
@@ -61,17 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([50000, 3, 32, 32])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import check_cifar_dataset_exists\n",
     "data_path=check_cifar_dataset_exists()\n",
@@ -81,74 +65,144 @@
     "test_data=torch.load(data_path+'cifar/test_data.pt')\n",
     "test_label=torch.load(data_path+'cifar/test_label.pt')\n",
     "\n",
-    "print(train_data.size())"
+    "print(train_data.size())\n",
+    "print(test_data.size())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a Three layer net class. "
+    "### Compute mean pixel intensity over all training set and all channels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class three_layer_net(nn.Module):\n",
+    "mean= train_data.mean()\n",
     "\n",
-    "    def __init__(self, input_size, hidden_size1, hidden_size2,  output_size):\n",
-    "        super(three_layer_net , self).__init__()\n",
-    "\n",
-    "        self.layer1 = nn.Linear(  input_size   , hidden_size1  , bias=False  )\n",
-    "        self.layer2 = nn.Linear(  hidden_size1 , hidden_size2  , bias=False  )\n",
-    "        self.layer3 = nn.Linear(  hidden_size2 , output_size   , bias=False  )        \n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        \n",
-    "        y       = self.layer1(x)\n",
-    "        y_hat   = F.relu(y)\n",
-    "        z       = self.layer2(y_hat)\n",
-    "        z_hat   = F.relu(z)\n",
-    "        scores  = self.layer3(z_hat)\n",
-    "        \n",
-    "        return scores"
+    "print(mean)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build the net with the following size:\n",
-    "* input size = 3,072\n",
-    "* hidden size 1 = 500\n",
-    "* hidden size 2 = 500\n",
-    "* output size = 10\n",
-    "### How many parameters in total? (the one layer net had 30,000 parameters)"
+    "### Compute standard deviation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "three_layer_net(\n",
-      "  (layer1): Linear(in_features=3072, out_features=500, bias=False)\n",
-      "  (layer2): Linear(in_features=500, out_features=500, bias=False)\n",
-      "  (layer3): Linear(in_features=500, out_features=10, bias=False)\n",
-      ")\n",
-      "There are 1791000 (1.79 million) parameters in this neural network\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "net=three_layer_net(3072,500,500,10)\n",
+    "std= train_data.std()\n",
+    "\n",
+    "print(std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make a VGG convnet class. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VGG_convnet(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "\n",
+    "        super(VGG_convnet, self).__init__()\n",
+    "\n",
+    "        # block 1:         3 x 32 x 32 --> 64 x 16 x 16        \n",
+    "        self.conv1a = nn.Conv2d(3,   64,  kernel_size=3, padding=1 )\n",
+    "        self.conv1b = nn.Conv2d(64,  64,  kernel_size=3, padding=1 )\n",
+    "        self.pool1  = nn.MaxPool2d(2,2)\n",
+    "\n",
+    "        # block 2:         64 x 16 x 16 --> 128 x 8 x 8\n",
+    "        self.conv2a = # COMPLETE HERE\n",
+    "        self.conv2b = # COMPLETE HERE\n",
+    "        self.pool2  = # COMPLETE HERE\n",
+    "\n",
+    "        # block 3:         128 x 8 x 8 --> 256 x 4 x 4        \n",
+    "        self.conv3a = # COMPLETE HERE\n",
+    "        self.conv3b = # COMPLETE HERE\n",
+    "        self.pool3  = # COMPLETE HERE\n",
+    "        \n",
+    "        #block 4:          256 x 4 x 4 --> 512 x 2 x 2\n",
+    "        self.conv4a = # COMPLETE HERE\n",
+    "        self.pool4  = # COMPLETE HERE\n",
+    "\n",
+    "        # linear layers:   512 x 2 x 2 --> 2048 --> 4096 --> 4096 --> 10\n",
+    "        self.linear1 = # COMPLETE HERE\n",
+    "        self.linear2 = # COMPLETE HERE\n",
+    "        self.linear3 = # COMPLETE HERE\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        # block 1:         3 x 32 x 32 --> 64 x 16 x 16\n",
+    "        x = self.conv1a(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.conv1b(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool1(x)\n",
+    "\n",
+    "        # block 2:         64 x 16 x 16 --> 128 x 8 x 8\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "\n",
+    "        # block 3:         128 x 8 x 8 --> 256 x 4 x 4\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "\n",
+    "        #block 4:          256 x 4 x 4 --> 512 x 2 x 2\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "\n",
+    "        # linear layers:   512 x 2 x 2 --> 2048 --> 4096 --> 4096 --> 10\n",
+    "        x = x.view(# COMPLETE HERE)\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE\n",
+    "        x = # COMPLETE HERE \n",
+    "        \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build the net. How many parameters in total? (the three layer net had 2 million parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = # COMPLETE HERE\n",
+    "\n",
     "print(net)\n",
     "utils.display_num_param(net)"
    ]
@@ -157,36 +211,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Send the weights of the networks to the GPU"
+    "### Send the weights of the networks to the GPU (as well as the mean and std)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = net.to(device)"
+    "net = # COMPLETE HERE\n",
+    "\n",
+    "mean = mean.to(device)\n",
+    "\n",
+    "std = std.to(device)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choose the criterion and optimizer. Also choose:\n",
-    "* batch size =200\n",
-    "* learning rate =0.01\n"
+    "### Choose the criterion, batch size, and initial learning rate. Select the following:\n",
+    "* batch size =128\n",
+    "* initial learning rate =0.25\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer=torch.optim.SGD( net.parameters() , lr=0.01 )\n",
-    "bs= 200"
+    "my_lr= # COMPLETE HERE\n",
+    "bs=    # COMPLETE HERE"
    ]
   },
   {
@@ -198,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,35 +265,25 @@
     "    running_error=0\n",
     "    num_batches=0\n",
     "\n",
-    "\n",
     "    for i in range(0,10000,bs):\n",
     "\n",
-    "        # extract the minibatch\n",
     "        minibatch_data =  test_data[i:i+bs]\n",
     "        minibatch_label= test_label[i:i+bs]\n",
     "\n",
-    "        # send them to the gpu\n",
     "        minibatch_data=minibatch_data.to(device)\n",
     "        minibatch_label=minibatch_label.to(device)\n",
+    "        \n",
+    "        inputs = (minibatch_data - mean)/std\n",
     "\n",
-    "        # reshape the minibatch\n",
-    "        inputs = minibatch_data.view(bs,3072)\n",
-    "\n",
-    "        # feed it to the network\n",
     "        scores=net( inputs ) \n",
     "\n",
-    "        # compute the error made on this batch\n",
     "        error = utils.get_error( scores , minibatch_label)\n",
     "\n",
-    "        # add it to the running error\n",
     "        running_error += error.item()\n",
     "\n",
     "        num_batches+=1\n",
     "\n",
-    "\n",
-    "    # compute error rate on the full test set\n",
     "    total_error = running_error/num_batches\n",
-    "\n",
     "    print( 'error rate on test set =', total_error*100 ,'percent')"
    ]
   },
@@ -243,62 +291,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Do 200 passes through the training set."
+    "### Do 20 passes through the training set. Divide the learning rate by 2 at epoch 10, 14 and 18."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch= 0 \t time= 0.6106035709381104 \t loss= 0.6594680517911911 \t error= 22.514001846313477 percent\n",
-      "error rate on test set = 44.37000131607056 percent\n",
-      " \n",
-      "epoch= 20 \t time= 13.214330434799194 \t loss= 0.6185894093513489 \t error= 21.15400190353394 percent\n",
-      "error rate on test set = 46.36000096797943 percent\n",
-      " \n",
-      "epoch= 40 \t time= 25.93250298500061 \t loss= 0.5372329169511795 \t error= 18.034001994132996 percent\n",
-      "error rate on test set = 49.13000023365021 percent\n",
-      " \n",
-      "epoch= 60 \t time= 38.12159729003906 \t loss= 0.4854620695114136 \t error= 15.974001812934876 percent\n",
-      "error rate on test set = 44.53000068664551 percent\n",
-      " \n",
-      "epoch= 80 \t time= 50.73514485359192 \t loss= 0.44084384822845457 \t error= 14.024001908302308 percent\n",
-      "error rate on test set = 46.690001010894775 percent\n",
-      " \n",
-      "epoch= 100 \t time= 63.52132797241211 \t loss= 0.3863265396952629 \t error= 12.190001726150513 percent\n",
-      "error rate on test set = 44.64000141620636 percent\n",
-      " \n",
-      "epoch= 120 \t time= 76.77462935447693 \t loss= 0.3582963993549347 \t error= 10.702001976966857 percent\n",
-      "error rate on test set = 44.820001006126404 percent\n",
-      " \n",
-      "epoch= 140 \t time= 89.11116552352905 \t loss= 0.2646069820523262 \t error= 7.540001773834229 percent\n",
-      "error rate on test set = 46.72000062465668 percent\n",
-      " \n",
-      "epoch= 160 \t time= 100.49665093421936 \t loss= 0.28154995915293696 \t error= 7.540001964569091 percent\n",
-      "error rate on test set = 45.52000069618225 percent\n",
-      " \n",
-      "epoch= 180 \t time= 113.24474835395813 \t loss= 0.23997151866555214 \t error= 6.414002466201782 percent\n",
-      "error rate on test set = 44.960000872612 percent\n",
-      " \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start=time.time()\n",
     "\n",
-    "for epoch in range(200):\n",
+    "for epoch in range(1,20):\n",
     "    \n",
+    "    # divide the learning rate by 2 at epoch 10, 14 and 18\n",
+    "    if # COMPLETE HERE\n",
+    "        my_lr = # COMPLETE HERE\n",
+    "    \n",
+    "    # create a new optimizer at the beginning of each epoch: give the current learning rate.   \n",
+    "    optimizer=torch.optim.SGD( # COMPLETE HERE )\n",
+    "        \n",
+    "    # set the running quatities to zero at the beginning of the epoch\n",
     "    running_loss=0\n",
     "    running_error=0\n",
     "    num_batches=0\n",
     "    \n",
+    "    # set the order in which to visit the image from the training set\n",
     "    shuffled_indices=torch.randperm(50000)\n",
     " \n",
     "    for count in range(0,50000,bs):\n",
@@ -312,23 +332,23 @@
     "        minibatch_label=  train_label[indices]\n",
     "        \n",
     "        # send them to the gpu\n",
-    "        minibatch_data=minibatch_data.to(device)\n",
-    "        minibatch_label=minibatch_label.to(device)\n",
+    "        minibatch_data=  # COMPLETE HERE\n",
+    "        minibatch_label= # COMPLETE HERE\n",
     "        \n",
-    "        # reshape the minibatch\n",
-    "        inputs = minibatch_data.view(bs,3072)\n",
-    "\n",
+    "        # normalize the minibatch (this is the only difference compared to before!)\n",
+    "        inputs = # COMPLETE HERE\n",
+    "        \n",
     "        # tell Pytorch to start tracking all operations that will be done on \"inputs\"\n",
     "        inputs.requires_grad_()\n",
     "\n",
     "        # forward the minibatch through the net \n",
-    "        scores=net( inputs ) \n",
+    "        scores= # COMPLETE HERE \n",
     "\n",
     "        # Compute the average of the losses of the data points in the minibatch\n",
-    "        loss =  criterion( scores , minibatch_label) \n",
+    "        loss =  # COMPLETE HERE \n",
     "        \n",
     "        # backward pass to compute dL/dU, dL/dV and dL/dW   \n",
-    "        loss.backward()\n",
+    "        # COMPLETE HERE\n",
     "\n",
     "        # do one step of stochastic gradient descent: U=U-lr(dL/dU), V=V-lr(dL/dU), ...\n",
     "        optimizer.step()\n",
@@ -349,16 +369,14 @@
     "    # compute stats for the full training set\n",
     "    total_loss = running_loss/num_batches\n",
     "    total_error = running_error/num_batches\n",
-    "    elapsed = time.time()-start\n",
+    "    elapsed = (time.time()-start)/60\n",
     "    \n",
-    "    if epoch%20 == 0:\n",
-    "        print('epoch=',epoch, '\\t time=', elapsed, '\\t loss=', total_loss , '\\t error=', total_error*100 ,'percent')\n",
-    "        eval_on_test_set() \n",
-    "        print(' ')\n",
+    "\n",
+    "    print('epoch=',epoch, '\\t time=', elapsed,'min','\\t lr=', my_lr  ,'\\t loss=', total_loss , '\\t error=', total_error*100 ,'percent')\n",
+    "    eval_on_test_set() \n",
+    "    print(' ')\n",
     "    \n",
-    "    \n",
-    "        \n",
-    "        "
+    "           "
    ]
   },
   {
@@ -381,18 +399,16 @@
     "# diplay the picture\n",
     "utils.show(im)\n",
     "\n",
+    "# send to device, rescale, and view as a batch of 1 \n",
+    "im = im.to(device)\n",
+    "im= (im-mean) / std\n",
+    "im=im.view(1,3,32,32)\n",
+    "\n",
     "# feed it to the net and display the confidence scores\n",
-    "scores =  net( im.view(1,3072).to(device)) \n",
+    "scores =  net(im) \n",
     "probs= F.softmax(scores, dim=1)\n",
     "utils.show_prob_cifar(probs.cpu())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
